# SimulationGame

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  renderdoc.cap
content/data/: character-creator.json  creature.json  equipment.json  items.json  names.json
content/meshes/: Human.glb  Human_Female.glb  Human_Male.glb
content/shaders/: common.glsl  guiText.vert.glsl  simple.vert.glsl  skeletalMesh.frag.glsl  skeletalMesh.vert.glsl  unlitFont-sdf.frag.glsl  unlitTextured.frag.glsl  unpack.glsl
content/ui/: ui-style.json
game/: CMakeLists.txt
game/src/: main.cpp
game/src/core/: Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp
game/src/sdl/: SDL.cpp  SDL.hpp
src/: SimulationGame.cpp  SimulationGame.hpp  main.cpp
src/character/: Character.cpp  Character.hpp
src/characters/: PlayerCharacter.cpp  PlayerCharacter.hpp
src/components/: Camera.hpp  Canvas.hpp  Creature.hpp  InputHandler.hpp  Renderable.hpp  Sprite.hpp  Text.hpp  Transform.hpp
src/core/: AssetLoader.cpp  AssetLoader.hpp  Engine.cpp  Engine.hpp  Environment.cpp  Environment.hpp  Filesystem.cpp  Filesystem.hpp  IGame.hpp  Logger.hpp  NameGenerator.cpp  NameGenerator.hpp  SeedWords.cpp  SeedWords.hpp  Settings.cpp  Settings.hpp  String.cpp  String.hpp
src/creature/: Compendium.cpp  Compendium.hpp
src/ecs/: ECS.hpp
src/gltf/: GLTF.cpp  GLTF.hpp
src/graphics/: Font.cpp  Font.hpp  Mesh.cpp  Mesh.hpp  RenderGraph.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Sampler.hpp  ShaderCross.cpp  ShaderCross.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture2D.cpp  Texture2D.hpp  UploadData.hpp
src/graphics/pipelines/: PipelineCache.hpp  SkeletalMeshPipeline.hpp  UnlitTexturePipeline.hpp
src/items/: Apparel.hpp  ItemCatalog.cpp  ItemCatalog.hpp  Materials.hpp
src/json/: Json.cpp  Json.hpp
src/level/: Level.hpp  MainMenu.cpp  MainMenu.hpp
src/math/: Distance.hpp  Graph.hpp  Hash.cpp  Hash.hpp  NameGenerator.cpp  NameGenerator.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Shapes.cpp  Shapes.hpp  Voronoi.cpp  Voronoi.hpp
src/menu/: ChooseCharacterMenu.cpp  ChooseCharacterMenu.hpp  ChooseWorldMenu.cpp  ChooseWorldMenu.hpp  CreateCharacterMenu.cpp  CreateCharacterMenu.hpp  CreateWorldMenu.cpp  CreateWorldMenu.hpp  MainMenu.cpp  MainMenu.hpp  MenuManager.cpp  MenuManager.hpp  MenuUtilities.cpp  MenuUtilities.hpp  SettingsMenu.cpp  SettingsMenu.hpp
src/sdl/: SDL.cpp  SDL.hpp  TTF.cpp  TTF.hpp
src/simulation/: Chunk.hpp
src/systems/: CreatureSystem.cpp  CreatureSystem.hpp  GuiSystem.cpp  GuiSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp  TextSystem.cpp  TextSystem.hpp
src/ui/: Button.cpp  Button.hpp  ButtonStyle.cpp  ButtonStyle.hpp  CheckBox.cpp  CheckBox.hpp  CheckBoxStyle.cpp  CheckBoxStyle.hpp  DropDown.cpp  DropDown.hpp  DropDownStyle.cpp  DropDownStyle.hpp  Element.cpp  Element.hpp  HorizontalLayout.cpp  HorizontalLayout.hpp  ImageElement.cpp  ImageElement.hpp  NineSlice.cpp  NineSlice.hpp  NineSliceStyle.cpp  NineSliceStyle.hpp  Radio.cpp  Radio.hpp  RadioStyle.cpp  RadioStyle.hpp  Slider.cpp  Slider.hpp  SliderStyle.cpp  SliderStyle.hpp  Spacer.cpp  Spacer.hpp  Style.cpp  Style.hpp  Switch.cpp  Switch.hpp  TextElement.cpp  TextElement.hpp  TextInputBox.cpp  TextInputBox.hpp  (+6 more)
src/world/: Biome.cpp  Biome.hpp  Chunk.hpp  MapOverlay.cpp  MapOverlay.hpp  Region.cpp  Region.hpp  TectonicPlate.cpp  TectonicPlate.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp  WorldParams.cpp  WorldParams.hpp  WorldSave.cpp  WorldSave.hpp
src/world/passes/: ClimatePass.cpp  ElevationPass.cpp  HydrologyPass.cpp  Passes.hpp  TectonicsPass.cpp
