cmake_minimum_required(VERSION 3.22)

project(SimulationGame
    VERSION 0.1
    DESCRIPTION "SimulationGame"
    LANGUAGES CXX)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_EXPORT_COMPILE_COMMANDS On)

set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
set(CMAKE_ALL_ERRORS_FATAL TRUE)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include (cmake/CPM.cmake)

set(CPM_SOURCE_CACHE "./cpm-cache")

CPMAddPackage("gh:libsdl-org/SDL#release-3.2.26")

add_subdirectory(game)
